# expectmine

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  bar.py  baz.py  example_step.py  filter_step.py  foo.py  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: pages.yml
docs/source/: conf.py  index.rst
examples/: filter_step.py  full_init.py  manual_lifecycle.py  quickstart_demo.py  sirius_output.mgf
expectmine/: __init__.py  main.py
expectmine/cli/: create.py  main.py  run_cli.py
expectmine/io/: base_io_adapter.py  utils.py
expectmine/logger/: base_logger.py  base_logger_adapter.py  utils.py
expectmine/pipeline/: pipeline.py  utils.py
expectmine/steps/: base_step.py  small_base_step.py  utils.py
expectmine/storage/: base_pipeline_storage.py  base_storage.py  base_storage_adapter.py  utils.py
expectmine/utils/: github.py
notebooks/: testing.ipynb
old_src/: main.py
old_src/cli/: __init__.py  cli.py  cli_new.py
old_src/pipeline/: __init__.py  pipeline.py  pipeline_new.py
old_src/steps/: __init__.py
old_src/utils/: __init__.py  github.py
scripts/: generator.py  markdown.py
scripts/markdown/: readme.tmpl.md
scripts/templates/: .env.tmpl  step.tmpl
src/: __init__.py
src/io/: __init__.py  base_io.py  base_io_adapter.py  utils.py
src/logger/: __init__.py  base_logger.py  base_logger_adapter.py  utils.py
src/pipeline/: __init__.py  pipeline.py  utils.py
tests/: io_test.py  mzmine3_test.py  pipeline_test.py  sirius_fingerprint_test.py  store_adapter_test.py  test_system_kv.py  utils.py
(+167 files in other folders)
