[project]
name = "expectmine"
version = "0.0.1"
description = "Preprocessing Pipeline for the Expectmine framework"
dependencies = [
    "inflection",
    "Jinja2",
    "InquirerPy",
    "tdqm",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pyright]
extraPaths = ["src"]
exclude = ["**/__init__.py"]
venv = "env"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__"]
extend-ignore = ["E203"]
per-file-ignores = ["__init__.py:F401"]
ban-relative-imports = "parents"
spellcheck-targets = "comments"
